# llm-evaluation-toolkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.venv_test/: pyvenv.cfg
.venv_test/Scripts/: activate  activate.bat  get_gprof  get_objgraph  undill
examples/: basic_usage.py
src/llm_eval/: __init__.py  datasets.py  types.py
src/llm_eval/evaluators/: __init__.py
src/llm_eval/metrics/: __init__.py  base.py  bleu.py  judge.py  rouge.py  semantic.py
src/llm_eval/providers/: __init__.py  anthropic_provider.py  openai_provider.py
tests/: conftest.py  test_evaluators.py  test_metrics.py  test_types.py
